fix spacing for full width headers on template pages

--- a/components/ContainerHeader/ContainerHeader.module.scss
+++ b/components/ContainerHeader/ContainerHeader.module.scss
@@ -80,30 +80,6 @@
           text-transform: uppercase;
         }
       }
-
-      .external-links {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        gap: 1rem;
-
-        a {
-          padding: 8px 20px;
-          border-radius: 20px;
-          text-decoration: none;
-          border: 1px solid black;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-around;
-          align-items: center;
-        }
-
-        img,
-        svg {
-          padding: 0 0 0 1rem !important;
-        }
-      }
     }
   }
 }
