--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -177,7 +177,7 @@
 }
 
 .full-width-page-header {
-  padding: 1rem 6rem;
+  padding: 1rem 6rem 2.5rem 6rem;
   color: white;
   text-decoration: none;
   min-height: 8rem;
