--- a/styles/global.scss
+++ b/styles/global.scss
@@ -53,10 +53,9 @@ input[type="text"] {
     border-radius: 20px;
     text-decoration: none;
     border: 1px solid black;
-    transition: all 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 
     &:hover {
-      border: 1px solid white;
       color: white;
       background: black;
 
@@ -73,8 +72,13 @@ input[type="text"] {
     border: 1px solid white;
 
     &:hover {
-      border: 1px solid black;
       color: black;
+      background: white;
+
+      img,
+      svg {
+        filter: invert(1);
+      }
     }
   }
 
